--- a/package.json
+++ b/package.json
@@ -10,6 +10,94 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "hint": "^7.1.8"
+    "hint": "^7.1.8",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0"
+  },
+  "dependencies": {
+    "array-union": "^2.1.0",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^2.0.1",
+    "browserslist": "^4.21.7",
+    "chalk": "^4.1.2",
+    "clean-stack": "^2.2.0",
+    "cli-cursor": "^3.1.0",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "crypto-random-string": "^2.0.0",
+    "deep-extend": "^0.6.0",
+    "depd": "^2.0.0",
+    "dir-glob": "^3.0.1",
+    "eastasianwidth": "^0.2.0",
+    "end-of-stream": "^1.4.4",
+    "eventemitter2": "^6.4.9",
+    "fast-levenshtein": "^2.0.6",
+    "globby": "^11.1.0",
+    "has-flag": "^4.0.0",
+    "has-yarn": "^2.1.0",
+    "https": "^1.0.0",
+    "humanize-ms": "^1.2.1",
+    "import-lazy": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^4.0.0",
+    "inherits": "^2.0.4",
+    "is-ci": "^3.0.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-interactive": "^1.0.0",
+    "is-lambda": "^1.0.1",
+    "is-number": "^7.0.0",
+    "is-obj": "^2.0.0",
+    "is-typedarray": "^1.0.0",
+    "is-yarn-global": "^0.3.0",
+    "isexe": "^2.0.0",
+    "jsonparse": "^1.3.1",
+    "latest-version": "^7.0.0",
+    "lodash": "^4.17.21",
+    "lowercase-keys": "^2.0.0",
+    "map-age-cleaner": "^0.1.3",
+    "mem": "^5.1.1",
+    "merge-stream": "^2.0.0",
+    "mimic-fn": "^2.1.0",
+    "mimic-response": "^1.0.1",
+    "ms": "^2.1.2",
+    "once": "^1.4.0",
+    "optionator": "^0.9.1",
+    "ora": "^5.4.1",
+    "os-locale": "^5.0.0",
+    "p-defer": "^1.0.0",
+    "p-is-promise": "^2.1.0",
+    "package-json": "^8.1.0",
+    "path-type": "^4.0.0",
+    "prepend-http": "^2.0.0",
+    "pump": "^3.0.0",
+    "rc": "^1.2.8",
+    "registry-url": "^5.1.0",
+    "restore-cursor": "^3.1.0",
+    "retry": "^0.12.0",
+    "reusify": "^1.0.4",
+    "safer-buffer": "^2.1.2",
+    "setimmediate": "^1.0.5",
+    "shebang-regex": "^3.0.0",
+    "slash": "^3.0.0",
+    "socks-proxy-agent": "^7.0.0",
+    "ssri": "^10.0.4",
+    "strip-final-newline": "^2.0.0",
+    "strip-json-comments": "^2.0.1",
+    "to-readable-stream": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "type-fest": "^0.20.2",
+    "typedarray-to-buffer": "^3.1.5",
+    "unique-string": "^2.0.0",
+    "update-notifier": "^6.0.2",
+    "url-parse-lax": "^3.0.0",
+    "util-deprecate": "^1.0.2",
+    "wcwidth": "^1.0.1",
+    "widest-line": "^3.1.0",
+    "word-wrap": "^1.2.3",
+    "wrappy": "^1.0.2",
+    "xdg-basedir": "^4.0.0"
   }
 }
